--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Techniki Internetowe</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Techniki Internetowe</title>
 </head>
 <body>
 
-<h1>Hello world</h1>
+<h1 id="id">Hello world</h1>
 
 </body>
 </html>
