--- a/index.html
+++ b/index.html
@@ -1,12 +1,140 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="styles.css"> 
     <title>Techniki Internetowe</title>
 </head>
 <body>
 
-<div class="primary box"></div>
+<div class="primary"></div>
+<div class="grid">
+    <header>
+        <h1>Jan Kowalski</h1>
+        <h2>Curriculum Vitae</h2>
+    </header>
+    <sidebar>
+        <img src="image.png" alt="Avatar" >
+        <div class="info">
+            <h3>Data i miejsca urodzenia</h3>
+            <p>01.01.1999 Kraków</p>
+            <h3>Adres</h3>
+            <p>ul.Czarnowiejska 21</p>
+            <p>01-123 Kraków</p>
+            <h3>Telefon</h3>
+            <p>111 222 333</p>
+            <h3>Email</h3>
+            <p>jan.kowalski123@gmail.com</p>
+        </div>
+        
+    </sidebar>
+    <article>
+        <div class="intro">
+            <h3><i class="fas fa-user"></i> Podsumowanie</h3>
+            <p class="content" style="border-top: double;">Jestem rozwijającym się programistą stron internetowych z paroletnim doświadczeniem w branży. </p>
+            <h3><i class="fas fa-briefcase"></i> Doświadczenie</h3>
+            <div class="flex">
+                <div class="box"><b>Od 01.01.2018 do 01.01.2019</b></div>
+                <div class="boxContent">
+                    <b>Firma ABB, Kraków</b>
+                    <p>Front-End Developer</p>
+                    <ul>
+                        <li>Nauka technologii front-endowych</li>
+                        <li>Budowanie warstwy front-end (React.js, Angular.js and Vue.js)</li>
+                        <li>Tworzenie szablonów UI/UX</li>
+                        <li>Tworzenie grafik komputerowych</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="flex" style="border-top: none;">
+                <div class="box"><b>Od 01.01.2019 do 01.01.2020</b></div>
+                <div class="boxContent">
+                    <b>Firma UBS, Kraków</b>
+                    <p>Back-End Developer</p>
+                    <ul>
+                        <li>Tworzenie web API</li>
+                        <li>Tworzenie komponentów wielokrotnego użytku</li>
+                        <li>Integracja backend(Node.js, Django)</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="flex" style="border-top: none;">
+                <div class="box"><b>Od 01.01.2020</b></div>
+                <div class="boxContent">
+                    <b>Firma Codete, Kraków</b>
+                    <p>Full-Stack Web Developer</p>
+                    <ul>
+                        <li>Tworzenie i projektowanie web API</li>
+                        <li>Tworzenie komponentów wielokrotnego użytku</li>
+                        <li>Tworzenie architektury front-end oraz integracja backend</li>
+                        <li>Zabezpieczanie danych</li>
+                        <li>Tworzenie serwerów i baz danych</li>
+                        <li>Tworzenie grafik komputerowych</li>
+                        <li>Tworzenie responsywnych stron</li>
+                    </ul>
+                </div>
+            </div>
+            <h3><i class="fas fa-university"></i> Wykształcenie</h3>
+            <div class="flex">
+                <div class="box"><b>Od 01.01.2017</b></div>
+                <div class="boxContent">
+                    <b>Akademia Górniczo-Hutnicza, Kraków</b>
+                    <p>Informatyka, wydział WiET</p>
+                </div>
+            </div> 
+            <h3><i class="fas fa-code"></i> Umiejętności</h3>
+            <div class="flex">
+                <div class="box"><b>Języki</b></div>
+                <div class="boxContent">
+                    <p>Język Angielski (C1)</p>
+                    <p>Język Hiszpański (B2)</p>
+                    <p>Język Niemiecki (B1)</p>
+                </div>
+            </div>
+            <div class="flex">
+                <div class="box"><b>Technologie</b></div>
+                <div class="boxContent">
+                    <b>Front-End</b>
+                    <ul>
+                        <li>JavaScript ES6</li>
+                        <li>Typescript</li>
+                        <li>React.js</li>
+                        <li>Angular.js</li>
+                        <li>Vue.js</li>
+                        <li>Redux</li>
+                        <li>CSS, SCSS</li>
+                        <li>Adobe Photoshop, Xd i Illustrator</li>
+                    </ul>
+                    <b>Back-End</b>
+                    <ul>
+                        <li>Node.js</li>
+                        <li>Django</li>
+                        <li>Firebase</li>
+                        <li>ASP.NET Core</li>
+                        <li>GraphQl and Apollo</li>
+                        <li>MongoDB and MySQL</li>
+                    </ul>
+                    <b>Języki programowania</b>
+                    <ul>
+                        <li>Javascript</li>
+                        <li>Python</li>
+                        <li>C#</li>
+                    </ul>
+                    <b>Inne</b>
+                    <ul>
+                        <li>Testowanie z Jest</li>
+                        <li>Git</li>
+                        <li>Wordpress</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </article>
+    <footer>
+        "Wyrażam zgodę na przetwarzanie moich danych osobowych przez Państwa firmę w celu prowadzenia rekrutacji na aplikowane przeze mnie stanowisko."
+    </footer>
+</div>
 
 </body>
 </html>
