--- a/google/index.html
+++ b/google/index.html
@@ -7,7 +7,47 @@
     <title>Techniki Internetowe</title>
 </head>
 <body>
-asdasdasdasd
+    <section>
+        <nav>
+            <ul>
+                <li><a>Gmail</a></li>
+                <li><a>Grafika</a></li>
+                <li><a></a></li>
+                <li><button>Zaloguj się</button></li>
+            </ul>
+        </nav>
+        <div>
+            <h1><img /></h1>
+            <div>
+                <span></span>
+                <input type="text" id="fname" name="fname">
+                <span></span>
+                <span></span>
+            </div>
+            <button>Szukaj w Google</button>
+            <button>Szczęśliwy traf</button>
+            <p>Korzystaj z Google w tych językach: <a>English</a>
+            </p>
+        </div>
+    </section>
+    <footer>
+        <div>Polska</div>
+        <div>
+            <ul>
+                <li><a>O nas</a></li>
+                <li><a>Reklamuj się</a></li>
+                <li><a>Dla firm</a></li>
+                <li><a>Jak działa wyszukiwarka</a></li>
+            </ul>
+            <span>Neutralność węglowa od 2007 roku</span>
+            <ul>
+                <li><a>Prywatność</a></li>
+                <li><a>Warunki</a></li>
+                <li><a>Ustawienia</a></li>
+            </ul>
+        </div>
+    </footer>
+    
 
 </body>
 </html>
