--- a/google/index.html
+++ b/google/index.html
@@ -9,38 +9,42 @@
 <body>
     <section>
         <nav>
-            <ul>
-                <li><a>Gmail</a></li>
-                <li><a>Grafika</a></li>
-                <li><a></a></li>
+            <ul class="ul1" >
                 <li><button>Zaloguj się</button></li>
+                <li><a></a></li>
+                <li><a>Grafika</a></li>
+                <li><a>Gmail</a></li>
             </ul>
         </nav>
-        <div>
-            <h1><img /></h1>
-            <div>
+        <div class="content">
+            <p><img src="google.png"  width="272"/></p>
+            <div class="input">
                 <span></span>
-                <input type="text" id="fname" name="fname">
+                <input type="text" maxlength="2048" name="fname">
                 <span></span>
                 <span></span>
             </div>
-            <button>Szukaj w Google</button>
-            <button>Szczęśliwy traf</button>
-            <p>Korzystaj z Google w tych językach: <a>English</a>
+            <div>
+                <button>Szukaj w Google</button>
+                <button>Szczęśliwy traf</button>
+            </div>
+            <p style="min-width: 329px;">Korzystaj z Google w tych językach: <a style="color:#1a0dab;">English</a>
             </p>
         </div>
     </section>
     <footer>
-        <div>Polska</div>
-        <div>
-            <ul>
+        
+
+            <div class="footer1">Polska</div>
+            <div class="footer2">
+            <ul class="FUl1">
                 <li><a>O nas</a></li>
                 <li><a>Reklamuj się</a></li>
                 <li><a>Dla firm</a></li>
                 <li><a>Jak działa wyszukiwarka</a></li>
             </ul>
-            <span>Neutralność węglowa od 2007 roku</span>
-            <ul>
+            <span class="span"><img src="leaf.png" height="14"/><a>Neutralność węglowa od 2007 roku</a></span>
+            <ul class="FUl2">
                 <li><a>Prywatność</a></li>
                 <li><a>Warunki</a></li>
                 <li><a>Ustawienia</a></li>
