--- a/google/index.html
+++ b/google/index.html
@@ -10,40 +10,40 @@
     <section>
         <nav>
             <ul class="ul1" >
-                <li><button>Zaloguj się</button></li>
-                <li><a></a></li>
-                <li><a>Grafika</a></li>
-                <li><a>Gmail</a></li>
+                <li ><button class="button" style="color: white; margin-top: 16px;">Zaloguj się</button></li>
+                <li style="margin-top: 20px;"><a><div class="icon"><img src="dots.png" height="20" width="20" style=" position: relative; top: 5px;"/></div></a></li>
+                <li class="li"><a>Grafika</a></li>
+                <li class="li"><a>Gmail</a></li>
             </ul>
         </nav>
         <div class="content">
             <p><img src="google.png"  width="272"/></p>
             <div class="input">
-                <span></span>
+                <span ><img src="look.png" height="24"/></span>
                 <input type="text" maxlength="2048" name="fname">
-                <span></span>
-                <span></span>
+                <span><img src="keyboard.png" height="24" /></span>
+                <span><img src="microphone.png" height="24" /></span>
             </div>
             <div>
                 <button>Szukaj w Google</button>
                 <button>Szczęśliwy traf</button>
             </div>
-            <p style="min-width: 329px;">Korzystaj z Google w tych językach: <a style="color:#1a0dab;">English</a>
+            <p style="min-width: 329px; line-height: 28px;">Korzystaj z Google w tych językach: <a style="color:#1a0dab;">English</a>
             </p>
         </div>
     </section>
     <footer>
         
 
-            <div class="footer1">Polska</div>
-            <div class="footer2">
+            <div class="footer1" style="font-size: 15px;">Polska</div>
+            <div class="footer2" style="font-size: 14px;">
             <ul class="FUl1">
                 <li><a>O nas</a></li>
                 <li><a>Reklamuj się</a></li>
                 <li><a>Dla firm</a></li>
                 <li><a>Jak działa wyszukiwarka</a></li>
             </ul>
-            <span class="span"><img src="leaf.png" height="14"/><a>Neutralność węglowa od 2007 roku</a></span>
+            <span class="span"><img src="leaf.png" height="14" /><a>Neutralność węglowa od 2007 roku</a></span>
             <ul class="FUl2">
                 <li><a>Prywatność</a></li>
                 <li><a>Warunki</a></li>
