--- a/google/index.html
+++ b/google/index.html
@@ -22,7 +22,7 @@
                 <span ><img src="look.png" height="24"/></span>
                 <input type="text" maxlength="2048" name="fname">
                 <span><img src="keyboard.png" height="24" /></span>
-                <span><img src="microphone.png" height="24" /></span>
+                <span><img src="microphone.png" height="24" style="margin-left: 15px;"/></span>
             </div>
             <div>
                 <button>Szukaj w Google</button>
