--- a/google/index.html
+++ b/google/index.html
@@ -28,7 +28,7 @@
                 <button>Szukaj w Google</button>
                 <button>Szczęśliwy traf</button>
             </div>
-            <p style="min-width: 329px; line-height: 28px;">Korzystaj z Google w tych językach: <a style="color:#1a0dab;">English</a>
+            <p style="min-width: 329px; line-height: 28px; font-size: small;">Korzystaj z Google w tych językach: <a style="color:#1a0dab;">English</a>
             </p>
         </div>
     </section>
