--- a/CV/index.html
+++ b/CV/index.html
@@ -15,7 +15,7 @@
         <h2>Curriculum Vitae</h2>
     </header>
     <sidebar>
-        <img src="image.png" alt="Avatar" >
+        <img src="../image.png" alt="Avatar" >
         <div class="info">
             <h3>Data i miejsca urodzenia</h3>
             <p>01.01.1999 Kraków</p>
